Modifiies some sytlings

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <div class="header">
     <h1><i class='fa fa-pencil'></i><span>Notes</span></h1>
   </div>
-  <button class='btn'>Create Note</button>
+  <button class='btn'><i class="fa fa-book"></i> Create Note</button>
   <div class='content-container'>
   </div>
 </div>
